--- a/assets/templates/restaurants/restaurant-view-booking-table.html
+++ b/assets/templates/restaurants/restaurant-view-booking-table.html
@@ -185,77 +185,33 @@
                 <th>Customer Name</th>
                 <th>Order Id</th>
                 <th>No of Members</th>
+                <th>Table Type</th>
                 <th>Date</th>
                 <th>Time</th>
-
-                <th >Status</th>
+                <th>Status</th>
+                <th></th>
+                <th></th>
               </tr>
             </thead>
             <tbody style="background-color:white ">
+              {% for u in  user %}
               <tr>
-                <td>Jacob</td>
-                <td>Photoshop</td>
-                <td class="text-danger"> 28.76% <i class="ti-arrow-down"></i></td>
-                <td >Messsy</td>
-                <td>Flash</td>
-                <td ><button type="button" class="btn btn-success"> <a href="#" class="text-white">Accept</a></button>
-    
-  
- 
-                  <button type="button" class="btn btn-danger "> <a href="#" class="text-white">Reject</a ></button></td>
+                <td>{{u.user.user_name}}</td>
+                <td>{{u.booking_id}}</td>
+                <td class="text-danger">{{u.members}}<i class="ti-arrow-down"></i></td>
+                <td>{{u.table_category}}</td>
+                <td >{{u.date}}</td>
+                <td>{{u.time}}</td>
+                <td>{{u.status}}</td>
+                <td></td>
+                <td >
+                  {% if u.status == "pending" %}
+                  <button type="button" class="btn btn-success"> <a href="/accept-booking/{{u.booking_id}}" class="text-white">Accept</a></button>
+                  <button type="button" class="btn btn-danger "> <a href="/reject-booking/{{u.booking_id}}" class="text-white">Reject</a ></button>
+                  {% endif %}
+                  </td>
               </tr>
-              <tr>
-                <td>Messsy</td>
-                <td>Flash</td>
-                <td class="text-danger"> 21.06% <i class="ti-arrow-down"></i></td>
-                <td>Messsy</td>
-                <td>Flash</td>
-
-                <td><button type="button" class="btn btn-success"> <a href="# " class="text-white">Accept</a></button>
-    
-  
- 
-                  <button type="button" class="btn btn-danger "> <a href="#" class="text-white">Reject</a></button></td>
-              </tr>
-              <tr>
-                <td>John</td>
-                <td>Premier</td>
-                <td class="text-danger"> 35.00% <i class="ti-arrow-down"></i></td>
-                <td>Messsy</td>
-                <td>Flash</td>
-
-                <td><button type="button" class="btn btn-success "> <a href="#" class="text-white">Accept</a></button>
-    
-  
- 
-                  <button type="button" class="btn btn-danger"> <a href="#" class="text-white">Reject</a></button></td>
-              </tr>
-              <tr>
-                <td>Peter</td>
-                <td>After effects</td>
-                <td class="text-success"> 82.00% <i class="ti-arrow-up"></i></td>
-                <td>Messsy</td>
-                <td>Flash</td>
-
-                <td><button type="button" class="btn btn-success "> <a href="#" class="text-white">Accept</a></button>
-    
-  
- 
-                  <button type="button" class="btn btn-danger "> <a href="#" class="text-white">Reject</a></button></td>
-              </tr>
-              <tr>
-                <td>Dave</td>
-                <td>53275535</td>
-                <td class="text-success"> 98.05% <i class="ti-arrow-up"></i></td>
-                <td>Messsy</td>
-                <td>Flash</td>
-
-                <td ><button type="button" class="btn btn-success "> <a href="#" class="text-white">Accept</a></button>
-    
-  
- 
-                  <button type="button" class="btn btn-danger "> <a href="#" class="text-white">Reject</a></button></td>
-              </tr>
+              {% endfor %}
             </tbody>
           </table>
         </div>
